--- a/GameVault/minesweeper/minesweeper.html
+++ b/GameVault/minesweeper/minesweeper.html
@@ -9,9 +9,9 @@
     </head>
 
     <body>
+        <a href="../library.php" id="backBtn">← Back to Library</a>
         <h1>Mines: <span id="mines-count">0</span></h1>
         <div id="board"></div>
-        <br>
         <button id="flag-button">🚩</button>
     </body>
 </html>
