--- a/GameVault/minesweeper/minesweeper.html
+++ b/GameVault/minesweeper/minesweeper.html
@@ -10,6 +10,7 @@
 
     <body>
         <a href="../library.php" id="backBtn">← Back to Library</a>
+        <button id="resetBtn" onclick="location.reload()">Reset</button>
         <h1>Mines: <span id="mines-count">0</span></h1>
         <div id="board"></div>
         <button id="flag-button">🚩</button>
